--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Alphabets</title>
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,6 +16,7 @@
 </head>
 <body>
     <main>
+        My Alphabets
         <div id="diva">
             <div class="alphabet" id="a" onclick="play('apple')">A</div>
             <div class="alphabet" id="b" onclick="play('ball')">B</div>
