All pictures uploaded

--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@
             <div class="alphabet" id="k" onclick="play('ketchup')">K</div>
             <div class="alphabet" id="l" onclick="play('lion')">L</div>
             <div class="alphabet" id="m" onclick="play('mongoose')">M</div>
-            <div class="alphabet" id="n" onclick="play('n')">N</div>
-            <div class="alphabet" id="o" onclick="play('o')">O</div>
-            <div class="alphabet" id="p" onclick="play('p')">P</div>
-            <div class="alphabet" id="q" onclick="play('q')">Q</div>
-            <div class="alphabet" id="r" onclick="play('r')">R</div>
-            <div class="alphabet" id="s" onclick="play('s')">S</div>
-            <div class="alphabet" id="t" onclick="play('t')">T</div>
-            <div class="alphabet" id="u" onclick="play('u')">U</div>
-            <div class="alphabet" id="v" onclick="play('v')">V</div>
-            <div class="alphabet" id="w" onclick="play('w')">W</div>
-            <div class="alphabet" id="x" onclick="play('x')">X</div>
-            <div class="alphabet" id="y" onclick="play('y')">Y</div>
-            <div class="alphabet" id="z" onclick="play('z')">Z</div>
+            <div class="alphabet" id="n" onclick="play('nest')">N</div>
+            <div class="alphabet" id="o" onclick="play('olives')">O</div>
+            <div class="alphabet" id="p" onclick="play('pineapple')">P</div>
+            <div class="alphabet" id="q" onclick="play('queen')">Q</div>
+            <div class="alphabet" id="r" onclick="play('rabbit')">R</div>
+            <div class="alphabet" id="s" onclick="play('snake')">S</div>
+            <div class="alphabet" id="t" onclick="play('turtle')">T</div>
+            <div class="alphabet" id="u" onclick="play('umbrella')">U</div>
+            <div class="alphabet" id="v" onclick="play('van')">V</div>
+            <div class="alphabet" id="w" onclick="play('waiter')">W</div>
+            <div class="alphabet" id="x" onclick="play('xylophone')">X</div>
+            <div class="alphabet" id="y" onclick="play('yacht')">Y</div>
+            <div class="alphabet" id="z" onclick="play('zombie')">Z</div>
         </div>
         <div id="diva2">
             <div class="word">
